--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
 
   <div class="card">
     <img src="./images/image-qr-code.png" alt="qr code" class="card__img">
-    <h2 class="card__title">Improve your front-end skills by building projects</h2>
-    <p class="card__desc"> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-    </p>
+    <div class="card__content-container">
+      <h2 class="card__title">Improve your front-end skills by building projects</h2>
+      <p class="card__desc"> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+      </p>
+    </div>
   </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/creative-cookie">creative-cookie</a>.
   </div>
 </body>
 </html>
